--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to homepage of our company ???</a></div>
+				<div class="logo"><a href="#">Welcome to homepage of our company with a new color</a></div>
 			</header>
 
 		<!-- Main -->
